--- a/Irvin Barham - Website.html
+++ b/Irvin Barham - Website.html
@@ -14,7 +14,7 @@
 <header>
 	<h1> Irvin Barham </h1>
 	<p> <i> irvinbarham@gmail.com </i>| (630)-877-2659 | 
-	<a href="https://github.com/IrvinBarham" Github>Github</a></p>
+	<a href="https://github.com/IrvinBarham">Github</a></p>
 </header>
 </div> 
 
